--- a/.github/workflows/publish-proposal.yaml
+++ b/.github/workflows/publish-proposal.yaml
@@ -1,22 +1,52 @@
+name: Render proposal with Nix and Quarto
+
 on:
   push:
-    branches: [main, master]
-
-name: publish-proposal
+    branches:
+      - main
+      - master
 
 jobs:
-  render-proposal:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-      - name: Setup Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-        with:
-          tinytex: true
-          
-      - name: Render and publish to GitHub Pages
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
-          path: "isc-proposal.qmd"
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Install Nix
+      uses: DeterminateSystems/nix-installer-action@main
+      with:
+        logger: pretty
+        log-directives: nix_installer=trace
+        backtrace: full
+        
+    - uses: cachix/cachix-action@v15
+      with:
+        name: rstats-on-nix
+        authToken: '${{ secrets.CACHIX_AUTH }}'
+
+    - name: Build development environment
+      run: |
+        nix-build
+
+    - name: Render
+      run: nix-shell --run "quarto render isc-proposal.qmd"
+
+    - name: Push rendered PDF to main
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+
+        git fetch origin
+        git checkout main
+        git pull origin main
+
+        rm -rf rendered_proposal
+        mkdir -p rendered_proposal
+
+        cp isc-proposal.pdf rendered_proposal/
+
+        git add -A rendered_proposal
+        git commit -m "Update rendered proposal" || echo "No changes to commit"
+        git push --force origin main
